--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
   </header>
   <main>
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-12" id="trivia">
+      <div class="row" id="trivia">
 
-        </div>
+
       </div>
+    </div>
     </div>
   </main>
   <footer class="bg-dark text-light">
@@ -45,7 +45,9 @@
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.10/dist/sweetalert2.all.min.js"
     integrity="sha256-hw7v8jZF/rFEdx1ZHepT4D73AFTHLu/P9kEyrNesRyc=" crossorigin="anonymous"></script>
+
   <script src="app/App.js" type="module"></script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"
     integrity="sha512-odNmoc1XJy5x1TMVMdC7EMs3IVdItLPlCeL5vSUPN2llYKMJ2eByTTAIiiuqLg+GdNr9hF6z81p27DArRFKT7A=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
